syntax = "proto3";
package auth;
service AuthService {
  rpc GetUserRoles (GetUserRolesRequest) returns (GetUserRolesReply) {}
}
message GetUserRolesRequest {
  int32 userId = 1;
}
message GetUserRolesReply {
  repeated UserRoles userRoles = 1;
}

message UserRoles {
  int32 id = 1;
  int32 userId = 2;
  string role = 3;
  string createdAt = 4;
  string updatedAt = 5;
}
